installdir = $(pkgdatadir)/rc_models

if AIRDIGITAL
dist_install_DATA = rc_models.cfg zgemma1.png zgemma1.xml zgemma2.png zgemma2.xml zgemma3.png zgemma3.xml zgemma5.png zgemma5.xml zgemma6.png zgemma6.xml zgemma7.png zgemma7.xml
endif

if AMIKO
dist_install_DATA = rc_models.cfg amiko1.png amiko1.xml amiko2.png amiko2.xml amiko4.png amiko4.xml
endif

if AX
dist_install_DATA = rc_models.cfg triplex.png triplex.xml
endif

if AZBOX
dist_install_DATA = rc_models.cfg azboxelite.png azboxelite.xml azboxhd.png azboxhd.xml azboxme.png azboxme.xml
endif

if BEYONWIZ
dist_install_DATA = rc_models.cfg beyonwiz1.png beyonwiz1.xml beyonwiz2.png beyonwiz2.xml ini5.png ini5.xml ini7.png ini7.xml
endif

if BLACKBOX
dist_install_DATA = rc_models.cfg sogno.png sogno.xml uniboxhde.png uniboxhde.xml
endif

if BRE2ZE
dist_install_DATA = rc_models.cfg wwio1.png wwio1.xml
endif

if BROADMEDIA
dist_install_DATA = rc_models.cfg miraclebox.png miraclebox.xml sab1.png sab1.xml
endif

if CERYON
dist_install_DATA = rc_models.cfg ax1.png ax1.xml e4hd.png e4hd.xml e4hdcombo.png e4hdcombo.xml miraclebox.png miraclebox.xml protek1.png protek1.xml protek2.png protek2.xml red1.png red1.xml red2.png red2.xml
endif

if CUBE
dist_install_DATA = rc_models.cfg cube.png cube.xml
endif

if DAGS
if TECHNOMATE
dist_install_DATA = rc_models.cfg tm1.png tm1.xml tm2.png tm2.xml tm3.png tm3.xml tm4.png tm4.xml tm5.png tm5.xml tm6.png tm6.xml
else
dist_install_DATA = rc_models.cfg fusionhd.png fusionhd.xml iqon1.png iqon1.xml iqon2.png iqon2.xml iqon3.png iqon3.xml mediabox.png mediabox.xml optimuss1.png optimuss1.xml optimuss2.png optimuss2.xml qviart1.png qviart1.xml qviart3.png qviart3.xml qviart4.png qviart4.xml revo.png revo.xml vala.png vala.xml
endif
endif

if DINOBOT
dist_install_DATA = rc_models.cfg anadol1.png anadol1.xml anadol3.png anadol3.xml ariva.png ariva.xml axas1.png axas1.xml axas2.png axas2.xml axas3.png axas3.xml dinobot.png dinobot.xml izibox1.png izibox1.xml mediabox4k.png mediabox4k.xml protek3.png protek3.xml turing.png turing.xml
endif

if EBOX
dist_install_DATA = rc_models.cfg ebox5000.png ebox5000.xml
endif

if OSMIO4KPLUS
dist_install_DATA = rc_models.cfg edision1.png edision1.xml edision2.png edision2.xml edision3.png edision3.xml xcore3.png xcore3.xml
endif

if ENTWOPIA
dist_install_DATA = rc_models.cfg evo1.png evo1.xml evo2.png evo2.xml evo5.png evo5.xml visionnet.png visionnet.xml
endif

if FORMULER
dist_install_DATA = rc_models.cfg formuler1.png formuler1.xml
endif

if HD51
dist_install_DATA = rc_models.cfg ax4.png ax4.xml ax51.png ax51.xml hd1100.png hd1100.xml hd2400.png hd2400.xml hd530c.png hd530c.xml hd60.png hd60.xml
endif

if GBTRIO4K
dist_install_DATA = rc_models.cfg gb3.png gb3.xml
endif

if HARDKERNEL
dist_install_DATA = rc_models.cfg hardkernel.png hardkernel.xml
endif

if ATEMIONEMESIS
dist_install_DATA = rc_models.cfg ini4.png ini4.xml
endif

if XPEEDLX3
dist_install_DATA = rc_models.cfg ini4.png ini4.xml
endif

if IXUSS
dist_install_DATA = rc_models.cfg ixuss.png ixuss.xml
endif

if LINKDROID
dist_install_DATA = rc_models.cfg amiko3.png amiko3.xml
endif

if MAXYTEC
dist_install_DATA = rc_models.cfg maxytec1.png maxytec1.xml
endif

if MECOOL
dist_install_DATA = rc_models.cfg amiko3.png amiko3.xml amlogic.png amlogic.xml k1pro.png k1pro.xml k3pro.png k3pro.xml
endif

if MINIX
dist_install_DATA = rc_models.cfg x8hp.png x8hp.xml
endif

if OCTAGON
dist_install_DATA = rc_models.cfg sf108.png sf108.xml sf2x8.png sf2x8.xml sf3038.png sf3038.xml sf5008.png sf5008.xml sf8008.png sf8008.xml sf98.png sf98.xml
endif

if ODIN
dist_install_DATA = rc_models.cfg e3hd.png e3hd.xml odinm6.png odinm6.xml odinm7.png odinm7.xml odinm9.png odinm9.xml
endif

if TIVIAR
dist_install_DATA = rc_models.cfg tiviar1.png tiviar1.xml
endif

if TRIPLEDOT
dist_install_DATA = rc_models.cfg evo3.png evo3.xml evo4.png evo4.xml evo8.png evo8.xml hdbox.png hdbox.xml relook.png relook.xml tyrant.png tyrant.xml
endif

if UCLAN
dist_install_DATA = rc_models.cfg uclan.png uclan.xml
endif

if ULTRAMINI
dist_install_DATA = rc_models.cfg gi1.png gi1.xml
endif

if VUPLUS
dist_install_DATA = rc_models.cfg vu.png vu.xml vu2.png vu2.xml vu3.png vu3.xml vu4.png vu4.xml
endif

if WETEK
dist_install_DATA = rc_models.cfg wetek.png wetek.xml wetek2.png wetek2.xml wetek3.png wetek3.xml
endif

if XCORE
dist_install_DATA = rc_models.cfg xcore1.png xcore1.xml
endif

if XP
dist_install_DATA = rc_models.cfg xp1000.png xp1000.xml
endif

if XTREND
dist_install_DATA = rc_models.cfg et4x00.png et4x00.xml et6500.png et6500.xml et6x00.png et6x00.xml et7x00.png et7x00.xml et7x00mini.png et7x00mini.xml et8000.png et8000.xml et9500.png et9500.xml et9x00.png et9x00.xml
endif
