installdir = $(pkglibdir)/python/Components

SUBDIRS = Sources Converter Renderer

install_PYTHON = \
	__init__.py \
	About.py \
	ActionMap.py \
	AVSwitch.py \
	Button.py \
	BlinkingPixmap.py \
	ChannelsImporter.py \
	ChoiceList.py \
	ClientMode.py \
	ConditionalWidget.py \
	config.py \
	ConfigList.py \
	Console.py \
	DiskInfo.py \
	Element.py \
	EpgList.py \
	EpgLoadSave.py \
	FanControl.py \
	FIFOList.py \
	FileList.py \
	GUIComponent.py \
	Harddisk.py \
	HdmiCec.py \
	HdmiRecord.py \
	HelpMenuList.py \
	HTMLComponent.py \
	ImportChannels.py \
	Input.py \
	InputDevice.py \
	InputHotplug.py \
	Label.py \
	Language.py \
	Language_cache.py \
	Lcd.py \
	MediaPlayer.py \
	MenuList.py \
	MovieList.py \
	MultiContent.py \
	Netlink.py \
	Network.py \
	NimManager.py \
	Opkg.py \
	PackageInfo.py \
	ParentalControl.py \
	PerServiceDisplay.py \
	Pixmap.py \
	Playlist.py \
	PluginComponent.py \
	PluginList.py \
	PowerTimerList.py \
	ProgressBar.py \
	RcModel.py \
	RecordingConfig.py \
	ResourceManager.py \
	RFmod.py \
	Scanner.py \
	ScrollLabel.py \
	SelectionList.py \
	Sensors.py \
	ServiceEventTracker.py \
	ServiceList.py \
	ServicePosition.py \
	ServiceScan.py \
	Slider.py \
	StackTrace.py \
	SystemInfo.py \
	Task.py \
	TimerList.py \
	TimerSanityCheck.py \
	Timezones.py \
	TunerInfo.py \
	TuneTest.py \
	UsageConfig.py \
	VariableText.py \
	VariableValue.py \
	VfdSymbols.py \
	VideoWindow.py \
	VolumeBar.py \
	VolumeControl.py
